force-app/main/default/objects/ESS_Master_Stationary__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_Files__c</fullName>
        <label>Attachment Files</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Available_Stock__c</fullName>
        <label>Available Stock</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Stock__c</fullName>
        <label>Due Stock</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_Url__c</fullName>
        <label>Image Url</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLowerMinimumStock__c</fullName>
        <formula>Stock_on_Hand__c &lt;= Minimum_Stock__c</formula>
        <label>IsLowerMinimumStock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By_User__c</fullName>
        <label>Last Updated By User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By__c</fullName>
        <formula>LastModifiedBy.FirstName_EN__c + &apos; &apos; +  LastModifiedBy.LastName_EN__c</formula>
        <label>Last Updated By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_User__c</fullName>
        <label>Last Updated Date User</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <label>Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minimum_Stock__c</fullName>
        <label>Minimum Stock</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Supplier__c</fullName>
        <label>Other Supplier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_For__c</fullName>
        <label>Service For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TSR</fullName>
                    <label>TOP-TSR (ศรีราชา)</label>
                </value>
                <value>
                    <fullName>TBK</fullName>
                    <label>TOP-TBK (กรุงเทพ)</label>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stationary_Name__c</fullName>
        <label>Stationary Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_History__c</fullName>
        <label>Stock History</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stock_on_Hand__c</fullName>
        <label>Stock on Hand</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cooperative</fullName>
                    <label>ร้านสหกรณ์ไทยออยล์ จำกัด</label>
                </value>
                <value>
                    <fullName>Maneerak</fullName>
                    <label>บริษัท สัตหีบมณีรักษ์ จำกัด</label>
                </value>
                <value>
                    <fullName>OfficeMate</fullName>
                    <label>Office Mate</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                    <label>ประเภทพัสดุสำนักงานทั่วไป</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ESS Master Stationary</label>
    <nameField>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>